majority of inspection/integration tests green again