@@ -1,5 +1,6 @@
 package org.e2immu.bytecode.java.asm;
 
+import org.e2immu.language.cst.api.element.SourceSet;
 import org.e2immu.language.cst.api.runtime.Runtime;
 import org.e2immu.language.cst.impl.runtime.RuntimeImpl;
 import org.e2immu.language.inspection.api.resource.CompiledTypesManager;
@@ -7,12 +8,16 @@ import org.e2immu.language.inspection.api.resource.Resources;
 import org.e2immu.language.inspection.api.resource.SourceFile;
 import org.e2immu.language.inspection.resource.CompiledTypesManagerImpl;
 import org.e2immu.language.inspection.resource.ResourcesImpl;
+import org.e2immu.language.inspection.resource.SourceSetImpl;
 import org.junit.jupiter.api.BeforeAll;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
+import java.util.List;
+import java.util.Set;
 
 public abstract class CommonJmodBaseTests {
     protected static Runtime runtime;
@@ -24,8 +29,10 @@ public abstract class CommonJmodBaseTests {
     public static void beforeClass() throws IOException, URISyntaxException {
         Resources cp = new ResourcesImpl(Path.of("."));
         classPath = cp;
-        URL url = new URL("jar:file:" + System.getProperty("java.home") + "/jmods/java.base.jmod!/");
-        SourceFile sourceFile = new SourceFile(url.getPath(), url.toURI(), null, null);
+        URI uri = URI.create("jar:file:" + System.getProperty("java.home") + "/jmods/java.base.jmod!/");
+        SourceSet sourceSet = new SourceSetImpl("java.base", List.of(), URI.create("file:unknown"), StandardCharsets.UTF_8,
+                false, true, true, true, false, Set.of(), Set.of());
+        SourceFile sourceFile = new SourceFile(uri.getRawSchemeSpecificPart(), uri, sourceSet, null);
         cp.addJmod(sourceFile);
         CompiledTypesManagerImpl mgr = new CompiledTypesManagerImpl(classPath);
         compiledTypesManager = mgr;
@@ -33,6 +40,9 @@ public abstract class CommonJmodBaseTests {
         byteCodeInspector = new ByteCodeInspectorImpl(runtime, compiledTypesManager, true,
                 false);
         mgr.setByteCodeInspector(byteCodeInspector);
+        mgr.addToTrie(cp, true);
+        mgr.addPredefinedTypeInfoObjects(runtime.predefinedObjects());
+        mgr.preload("java.lang");
     }
 
 }
